manifests/demo/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  namespace: tailscale-gateway-demo
  labels:
    app: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: caddy
          image: caddy:latest
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: caddy-config
              mountPath: /etc/caddy/Caddyfile
              subPath: Caddyfile
      volumes:
        - name: caddy-config
          configMap:
            name: demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-api-v1
  namespace: tailscale-gateway-demo
  labels:
    app: demo-api-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-api-v1
  template:
    metadata:
      labels:
        app: demo-api-v1
    spec:
      containers:
        - name: caddy
          image: caddy:latest
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: caddy-config
              mountPath: /etc/caddy/Caddyfile
              subPath: Caddyfile
      volumes:
        - name: caddy-config
          configMap:
            name: demo-api-v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-api-v2
  namespace: tailscale-gateway-demo
  labels:
    app: demo-api-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-api-v2
  template:
    metadata:
      labels:
        app: demo-api-v2
    spec:
      containers:
        - name: caddy
          image: caddy:latest
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: caddy-config
              mountPath: /etc/caddy/Caddyfile
              subPath: Caddyfile
      volumes:
        - name: caddy-config
          configMap:
            name: demo-api-v2
