manifests/demo/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: tailscale-gateway-demo
spec:
  selector:
    app.kubernetes.io/name: demo
    app.kubernetes.io/instance: demo
  ports:
    - port: 80
      targetPort: http
